--- a/ble.html
+++ b/ble.html
@@ -4,122 +4,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Web Bluetooth Example</title>
+    <title>Bluetooth Device Scanner</title>
+    <!-- Bootstrap CSS -->
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 </head>
 
-<body>
-    <h1>Web Bluetooth Device Scanner</h1>
-    <button id="scanButton">Scan for Devices</button>
-    <div id="deviceInfo"></div>
-    <form>
-        <input id="optionalServices" type="text" list="services" size="40"
-            placeholder="Bluetooth Services (e.g. generic_access, 0x1234)">
-        <button>Discover services &amp; characteristics</button>
-    </form>
-    <datalist id="services">
-        <option value="alert_notification">alert_notification</option>
-        <option value="automation_io">automation_io</option>
-        <option value="battery_service">battery_service</option>
-        <option value="blood_pressure">blood_pressure</option>
-        <option value="body_composition">body_composition</option>
-        <option value="bond_management">bond_management</option>
-        <option value="continuous_glucose_monitoring">continuous_glucose_monitoring</option>
-        <option value="current_time">current_time</option>
-        <option value="cycling_power">cycling_power</option>
-        <option value="cycling_speed_and_cadence">cycling_speed_and_cadence</option>
-        <option value="device_information">device_information</option>
-        <option value="environmental_sensing">environmental_sensing</option>
-        <option value="generic_access">generic_access</option>
-        <option value="generic_attribute">generic_attribute</option>
-        <option value="glucose">glucose</option>
-        <option value="health_thermometer">health_thermometer</option>
-        <option value="heart_rate">heart_rate</option>
-        <option value="human_interface_device">human_interface_device (blocklisted)</option>
-        <option value="immediate_alert">immediate_alert</option>
-        <option value="indoor_positioning">indoor_positioning</option>
-        <option value="internet_protocol_support">internet_protocol_support</option>
-        <option value="link_loss">link_loss</option>
-        <option value="location_and_navigation">location_and_navigation</option>
-        <option value="next_dst_change">next_dst_change</option>
-        <option value="phone_alert_status">phone_alert_status</option>
-        <option value="pulse_oximeter">pulse_oximeter</option>
-        <option value="reference_time_update">reference_time_update</option>
-        <option value="running_speed_and_cadence">running_speed_and_cadence</option>
-        <option value="scan_parameters">scan_parameters</option>
-        <option value="tx_power">tx_power</option>
-        <option value="user_data">user_data</option>
-        <option value="weight_scale">weight_scale</option>
-    </datalist>
-    <div id="log"></div>
-    <script>
-        document.getElementById('scanButton').addEventListener('click', onButtonClick);
-        var screenlog = document.getElementById('log');
+<body class="bg-light">
+    <div class="container mt-5">
+        <div class="card">
+            <div class="card-body">
+                <h1 class="card-title">Bluetooth Device Scanner</h1>
+                <p class="card-text">Click the button below to scan for Bluetooth devices with service UUID
+                    <code id="service-id"></code>.
+                </p>
+                <button id="scanButton" class="btn btn-primary">Scan for Devices</button>
+                <ul id="deviceList" class="list-group mt-3"></ul>
+                <ul id="messageList" class="list-group mt-3"></ul>
+            </div>
+        </div>
+    </div>
 
-
-        function log(str, end = '</br>') {
-            console.log(str)
-            var el = document.createElement('a');
-            el.textContent = str;
-            screenlog.appendChild(el);
-            if (end == '</br>') {
-                screenlog.appendChild(document.createElement('br'));
-            }
-        }
-        function onButtonClick() {
-            // Validate services UUID entered by user first.
-            //let optionalServices = document.querySelector('#optionalServices').value
-            //    .split(/, ?/).map(s => s.startsWith('0x') ? parseInt(s) : s)
-            //    .filter(s => s && BluetoothUUID.getService);
-
-            log('Requesting any Bluetooth Device...');
-            navigator.bluetooth.requestDevice({
-                // filters: [...] <- Prefer filters to save energy & show relevant devices.
-                acceptAllDevices: true,
-                //   optionalServices: optionalServices
-                optionalServices: ['0000180a-0000-1000-8000-00805f9b34fb']
-            })
-                .then(device => {
-                    log('Connecting to GATT Server...');
-                    return device.gatt.connect();
-                })
-                .then(server => {
-                    // Note that we could also get all services that match a specific UUID by
-                    // passing it to getPrimaryServices().
-                    log('Getting Services...');
-                    return server.getPrimaryServices();
-                })
-                .then(services => {
-                    log('Getting Characteristics...');
-                    let queue = Promise.resolve();
-                    services.forEach(service => {
-                        queue = queue.then(_ => service.getCharacteristics().then(characteristics => {
-                            log('> Service: ' + service.uuid);
-                            characteristics.forEach(characteristic => {
-                                log('>> Characteristic: ' + characteristic.uuid + ' ' +
-                                    getSupportedProperties(characteristic));
-                            });
-                        }));
-                    });
-                    return queue;
-                })
-                .catch(error => {
-                    log('Argh! ' + error);
-                });
-        }
-
-        /* Utils */
-
-        function getSupportedProperties(characteristic) {
-            let supportedProperties = [];
-            for (const p in characteristic.properties) {
-                if (characteristic.properties[p] === true) {
-                    supportedProperties.push(p.toUpperCase());
-                }
-            }
-            return '[' + supportedProperties.join(', ') + ']';
-        }
-
-    </script>
+    <script src="ble-scan.js"></script>
+    <!-- Bootstrap JS and dependencies -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 
 </html>
