WIP ... now parses temperature from SPM p_msg messages

--- a/ble.html
+++ b/ble.html
@@ -24,6 +24,7 @@
         </div>
     </div>
 
+    <script src="uplift/cluster_message.js"></script>
     <script src="ble-scan.js"></script>
     <!-- Bootstrap JS and dependencies -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
