--- a/ble.html
+++ b/ble.html
@@ -24,8 +24,8 @@
         </div>
     </div>
 
-    <script src="uplift/cluster_message.js"></script>
-    <script src="ble-scan.js"></script>
+    <script src="uplift/cluster_message.js" type="module"></script>
+    <script src="ble-scan.js" type="module"></script>
     <!-- Bootstrap JS and dependencies -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js"></script>
