work out some bugs. Now use ClusterMessages

--- a/ble.html
+++ b/ble.html
@@ -21,11 +21,11 @@
             <h2 class="card-title">Middleware Controls</h2>
             <div class="form-check form-switch mb-3">
                 <input class="form-check-input" type="checkbox" id="middleware1">
-                <label class="form-check-label" for="middleware1">Enable Middleware 1 (Threshold 50)</label>
+                <label class="form-check-label" for="middleware1">Enable Middleware 1 (p)</label>
             </div>
             <div class="form-check form-switch">
                 <input class="form-check-input" type="checkbox" id="middleware2">
-                <label class="form-check-label" for="middleware2">Enable Middleware 2 (Threshold 70)</label>
+                <label class="form-check-label" for="middleware2">Enable Middleware 2 (v, not parsed)</label>
             </div>
         </div>
     </div>
