--- a/monitor.html
+++ b/monitor.html
@@ -4,105 +4,49 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bluetooth Data Visualization with Multiple Data Sources</title>
-    <!-- Include D3.js -->
+    <title>Bluetooth Middleware Example</title>
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
     <script src="https://d3js.org/d3.v7.min.js"></script>
-    <!-- Include RxJS -->
     <script src="https://unpkg.com/rxjs/dist/bundles/rxjs.umd.min.js"></script>
 </head>
 
-<body>
+<body class="bg-light">
+    <div class="container py-5">
+        <h1 class="text-center mb-5">Cluster Messages</h1>
+
+        <div class="d-flex justify-content-center mb-4">
+            <button id="connectButton" class="btn btn-primary btn-lg">Choose Uplift Device</button>
+        </div>
+
+        <div id="middlewareControls" class="card p-4">
+            <h2 class="card-title">Middleware Controls</h2>
+            <div class="form-check form-switch mb-3">
+                <input class="form-check-input" type="checkbox" id="middleware1">
+                <label class="form-check-label" for="middleware1">Enable Middleware 1 (p)</label>
+            </div>
+            <div class="form-check form-switch">
+                <input class="form-check-input" type="checkbox" id="middleware2">
+                <label class="form-check-label" for="middleware2">Enable Middleware 2 (v, not parsed)</label>
+            </div>
+        </div>
+    </div>
+
     <h1>Bluetooth Data Visualization</h1>
     <!-- Toggle buttons -->
     <button id="toggleMultiply">Toggle Multiply Odd Messages</button>
     <button id="toggleDataSource">Toggle Data Source</button>
+    <button id="play">Play</button>
+    <button id="pause">Pause</button>
+    <input type="range" id="slider" min="0" max="99" value="0" step="1">
     <!-- SVG container for D3 -->
     <svg width="800" height="400"></svg>
 
-    <script>
-        const svg = d3.select("svg");
-        const width = +svg.attr("width");
-        const height = +svg.attr("height");
 
-        // Define scales
-        const x = d3.scaleLinear().domain([0, 100]).range([0, width]);
-        const y = d3.scaleLinear().domain([0, 100]).range([height, 0]);
 
-        // Define line generator
-        const line = d3.line()
-            .x(d => x(d.x))
-            .y(d => y(d.y));
-
-        // Append path for line chart
-        const path = svg.append("path")
-            .attr("stroke", "steelblue")
-            .attr("fill", "none");
-
-        // Initialize data arrays for two data sources
-        let dataSource1 = Array.from({ length: 10 }, (_, i) => ({ x: i * 10, y: Math.random() * 100 }));
-        let dataSource2 = Array.from({ length: 10 }, (_, i) => ({ x: i * 10, y: Math.random() * 100 }));
-        let multiplyOdd = false;
-        let useDataSource1 = true;
-
-        // Function to update chart
-        function update(data) {
-            path.datum(data)
-                .attr("d", line);
-        }
-
-        // RxJS Observables for two data sources
-        const { interval, fromEvent } = rxjs;
-        const { map, tap } = rxjs.operators;
-
-        // Data stream for data source 1
-        const dataStream1 = interval(1000).pipe(
-            map((i) => ({ x: dataSource1.length * 10, y: Math.random() * 100 })),
-            tap((point, index) => {
-                // Modify data if the toggle is active
-                if (multiplyOdd && index % 2 !== 0) {
-                    point.y *= 2;
-                }
-                dataSource1.push(point);
-                dataSource1.shift();
-                if (useDataSource1) {
-                    update(dataSource1);
-                }
-            })
-        );
-
-        // Data stream for data source 2
-        const dataStream2 = interval(1000).pipe(
-            map((i) => ({ x: dataSource2.length * 10, y: Math.random() * 100 })),
-            tap((point, index) => {
-                dataSource2.push(point);
-                dataSource2.shift();
-                if (!useDataSource1) {
-                    update(dataSource2);
-                }
-            })
-        );
-
-        // Start data streams
-        dataStream1.subscribe();
-        dataStream2.subscribe();
-
-        // Handle toggle multiply button click
-        fromEvent(document.getElementById('toggleMultiply'), 'click').subscribe(() => {
-            multiplyOdd = !multiplyOdd;
-            console.log('Toggle multiply odd messages:', multiplyOdd);
-        });
-
-        // Handle toggle data source button click
-        fromEvent(document.getElementById('toggleDataSource'), 'click').subscribe(() => {
-            useDataSource1 = !useDataSource1;
-            console.log('Toggle data source:', useDataSource1 ? 'Data Source 1' : 'Data Source 2');
-            // Update chart immediately with the new data source
-            update(useDataSource1 ? dataSource1 : dataSource2);
-        });
-
-        // Initial chart update
-        update(dataSource1);
-    </script>
+    <!-- Bootstrap JS Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script type="module" src="./monitor.js"></script>
 </body>
 
 </html>
