add a share button

--- a/monitor.html
+++ b/monitor.html
@@ -36,8 +36,9 @@
     <!-- Toggle buttons -->
     <button id="toggleMultiply">Toggle Multiply Odd Messages</button>
     <button id="toggleDataSource">Toggle Data Source</button>
-    <button id="play">Play</button>
-    <button id="pause">Pause</button>
+    <button id="play" disabled>Play</button>
+    <button id="pause" disabled>Pause</button>
+    <button id="toggleShare" disabled>Share</button>
     <input type="range" id="slider" min="0" max="99" value="0" step="1">
     <!-- SVG container for D3 -->
     <svg width="800" height="400"></svg>
