--- a/monitor.html
+++ b/monitor.html
@@ -9,6 +9,11 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
     <script src="https://d3js.org/d3.v7.min.js"></script>
     <script src="https://unpkg.com/rxjs/dist/bundles/rxjs.umd.min.js"></script>
+    <style>
+        .hidden {
+            display: none;
+        }
+    </style>
 </head>
 
 <body class="bg-light">
@@ -34,14 +39,18 @@
 
     <h1>Bluetooth Data Visualization</h1>
     <!-- Toggle buttons -->
-    <button id="toggleMultiply">Toggle Multiply Odd Messages</button>
-    <button id="toggleDataSource">Toggle Data Source</button>
-    <button id="play" disabled>Play</button>
-    <button id="pause" disabled>Pause</button>
-    <button id="toggleShare" disabled>Share</button>
-    <input type="range" id="slider" min="0" max="99" value="0" step="1">
+    <button id="toggleDataSource">Showing Live Data</button>
+
+
     <!-- SVG container for D3 -->
-    <svg width="800" height="400"></svg>
+    <svg id='monitor-graph' width="800" height="400"></svg>
+
+    <div id="capture-controls" class="hidden">
+        <button id="play" disabled>Play</button>
+        <button id="pause" disabled>Pause</button>
+        <button id="toggleCapture" disabled>Capture</button>
+        <input type="range" id="slider" min="0" max="99" value="0" step="1">
+    </div>
 
 
 
