--- a/dashboard/src/index.html
+++ b/dashboard/src/index.html
@@ -22,18 +22,18 @@
 
 {% block content %}
 <div id="settings" class="page">
-    <h1>Settings</h1>
-    <p>Here you can manage your settings.</p>
-    <p>Derived from dashboard at: https://github.com/zuramai/mazer</p>
+   
+    {% include "src/settings.html" %}
+    
+    
 </div>
 <div id="help" class="page">
-    <h1>Help</h1>
-    <p>Here you can submit a capture, by email.</p>
+
     {% include "src/monitor.html" %}
 
 </div>
 <div id="home" class="page active">
-    <h1>Home</h1>
+    <h1 class="index-title">Home</h1>
     <p>Here you can see graphs.</p>
 
     <div class="page-heading">
