--- a/dashboard/src/monitor.html
+++ b/dashboard/src/monitor.html
@@ -32,7 +32,9 @@
                 <span id="toggleDataSource" class="live-data-text mb-4">Showing Live Data</span>
 
                 <!-- SVG container for D3 -->
-                <svg id="monitor-graph" width="100%" height="450"></svg>
+                 <!-- Adding modern and cute tooltip-->
+                 <div id="tooltip" style="position: absolute; visibility: hidden; background-color: rgba(0, 0, 0, 0.8); color: white; padding: 8px; border-radius: 6px; font-size: 12px; box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2); pointer-events: none; transition: all 0.3s ease;"></div>
+                <svg id='monitor-graph' width="800" height="400"></svg>
                 <div id="tooltip" class="tooltip"></div>
             </div>
 
