--- a/dashboard/src/settings.html
+++ b/dashboard/src/settings.html
@@ -356,7 +356,7 @@
 
         <!-- Profile Picture Section -->
         <div class="profile-picture" style="display: flex; align-items: center; margin-bottom: 20px;">
-            <img src="/src/layouts/round.avif" alt="Profile Picture" style="width: 60px; height: 60px; border-radius: 50%; margin-right: 15px;">
+            <img src="round.avif" alt="Profile Picture" style="width: 60px; height: 60px; border-radius: 50%; margin-right: 15px;">
             <button style="padding: 10px 20px; background-color: #5e5af6; color: white; border: none; border-radius: 50px; margin-right: 10px; cursor: pointer;">Edit</button>
             <button style="padding: 10px 20px; background-color: #f44336; color: white; border: none; border-radius: 50px; cursor: pointer;">Delete</button>
         </div>
