added svg graph to index.html

--- a/dashboard/src/index.html
+++ b/dashboard/src/index.html
@@ -124,7 +124,7 @@
                                 <h4>Solar Panel Bluetooth Data</h4>
                             </div>
                             <div class="card-body">
-                                <svg id="solar-power-graph" width="800" height="400"></svg> <!-- This SVG element will be used by D3.js -->
+                                <svg id="index-graph" width="750" height="400"></svg> <!-- This SVG element will be used by D3.js -->
 
                             </div>
                         </div>
@@ -398,7 +398,6 @@
         console.error(`Page with id '${pageId}' not found.`);
     }
 }
-
     // Sign in with Google
     function signInWithGoogle() {
         const provider = new firebase.GoogleAuthProvider();
